Добавил логику удаления и обновления пользователей, переместил интефейсы в пакеты base сервис и репозиторий, исправил мелкие баги
